--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ node_modules/
 .code-workspace
 *.log
 build/
+
+# Once you have cloned the repo with the "empty" .env, run:
+# git update-index --skip-worktree .env
+# this will allow you to keep a private copy of the .env with all of your sensitive data WITHOUT accidentally pushing it into github
+# basically, it stops tracking new changes to the .env file (that's what the skip-worktree means)
+.env
